fix(rag): preserve staging chunks on permanent failure and update ingestion tests